--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
 body{
     background-color: blue;
+    background-image: url("Captura de tela 2022-11-05 161635.jpg");
+}
+p{
+    color: aliceblue;
 }
